--- a/agile-frontend/WebContent/flatfull/tpl/contact-detail/contact-details-timeline.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-detail/contact-details-timeline.html
@@ -382,10 +382,10 @@
 									<img src='/img/plugins/skype-call.png' style="width: 18px; height: 18px;position: relative; top: 2px; float:left;" data-toggle='tooltip' data-placement='top' title='' data-original-title='{{agile_lng_translate "contact-edit" "skype"}}'>
 								{{else}}
 									{{#if_equals "SIP" custom1}}
-										<img src='/widgets/sip-logo-small.png' style="width: 15px; height: 15px; margin-right: 3px; position: relative; top: 2px; float:left;" data-toggle='tooltip' data-placement='top' title='' data-original-title='{{agile_lng_translate "contact-edit" "skype"}}'>
+										<img src='/widgets/sip-logo-small.png' style="width: 15px; height: 15px; margin-right: 3px; position: relative; top: 2px; float:left;" data-toggle='tooltip' data-placement='top' title='' data-original-title='{{agile_lng_translate "contact-edit" "sip"}}'>
 									{{else}}
 										{{#if_equals "Asterisk" custom1}}
-											<img src='' style="width: 15px; height: 15px; margin-right: 5px;" data-toggle='tooltip' data-placement='top' title='' data-original-title='{{agile_lng_translate "contact-edit" "skype"}}'>
+											<img src='/img/plugins/asterisk-call.png' style="width: 15px; height: 15px; margin-right: 5px;" data-toggle='tooltip' data-placement='top' title='' data-original-title='{{agile_lng_translate "contact-edit" "asterisk"}}'>
 										{{/if_equals}}
 									{{/if_equals}}
 								{{/if_equals}}
@@ -422,7 +422,7 @@
 										<img src='/widgets/sip-logo-small.png' style="width: 15px; height: 15px; margin-right: 3px; position: relative; top: 2px; float:left;" data-toggle='tooltip' data-placement='top' title='' data-original-title='{{agile_lng_translate "contact-edit" "skype"}}'>
 									{{else}}
 										{{#if_equals "Asterisk" custom1}}
-											<img src='' style="width: 15px; height: 15px; margin-right: 5px;" data-toggle='tooltip' data-placement='top' title='' data-original-title='{{agile_lng_translate "contact-edit" "skype"}}'>
+											<img src='/img/plugins/asterisk-call.png' style="width: 15px; height: 15px; margin-right: 5px;" data-toggle='tooltip' data-placement='top' title='' data-original-title='{{agile_lng_translate "contact-edit" "asterisk"}}'>
 										{{/if_equals}}
 									{{/if_equals}}
 								{{/if_equals}}
