--- a/agile-frontend/WebContent/flatfull/tpl/voice-mail/voice-mail.html
+++ b/agile-frontend/WebContent/flatfull/tpl/voice-mail/voice-mail.html
@@ -149,7 +149,7 @@
                 </table>                
             </div>
             {{else}}
-            <div class="data-container">                
+            <div class="table-responsive">                
                 <table class="table table-striped showCheckboxes m-b-none agile-table panel" url="core/api/voicemails/bulk" id="voicemail-list">
                  <col width="30px"><col width="35%"><col width="35%"><col width="20%"><col width="10%">
                     <thead>
