updated for twilio conference issues

--- a/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
@@ -192,7 +192,7 @@
       {{#each this}}
         {{#if this.twillioNumber}}
           <li>
-            <a href="#" data-src="{{twillioNumber}}" data-name="{{username}}" class="twiliousers">
+            <a href="#" data-src="{{twillioNumber}}" data-name="{{username}}" class="twiliousers" style="float: left;width:100%;">
               <div class="pull-left m-r-xs">
               <img class="img-inital r r-2x" data-name="" src="{{pic}}" width="30px" height="30px" style="display:inline; width:30px; height:30px; " />
             </div>
@@ -211,7 +211,7 @@
         {{#each this}}
           <li>
           {{#if this.domainusernumber}}
-            <a href="#" data-src="{{domainusernumber}}" data-name="{{username}}" class="twiliousers">
+            <a href="#" data-src="{{domainusernumber}}" data-name="{{username}}" class="twiliousers" style="float: left;width:100%;">
                <div class="pull-left m-r-xs">
                 <img class="img-inital r r-2x" data-name="" src="{{pic}}" width="30px" height="30px" style="display:inline; width:30px; height:30px; " />
               </div>
@@ -241,7 +241,7 @@
       {{#each this}}
         {{#if this.twillioNumber}}
           <li>
-            <a href="#" data-src="{{twillioNumber}}" data-name="{{username}}" class="twiliousersconf">
+            <a href="#" data-src="{{twillioNumber}}" data-name="{{username}}" class="twiliousersconf" style="float: left;width:100%;">
               <div class="pull-left m-r-xs">
               <img class="img-inital r r-2x" data-name="" src="{{pic}}" width="30px" height="30px" style="display:inline; width:30px; height:30px; " />
             </div>
@@ -260,7 +260,7 @@
         {{#each this}}
           <li>
           {{#if this.domainusernumber}}
-            <a href="#" data-src="{{domainusernumber}}" data-name="{{username}}" class="twiliousersconf">
+            <a href="#" data-src="{{domainusernumber}}" data-name="{{username}}" class="twiliousersconf" style="float: left;width:100%;">
                <div class="pull-left m-r-xs">
                 <img class="img-inital r r-2x" data-name="" src="{{pic}}" width="30px" height="30px" style="display:inline; width:30px; height:30px; " />
               </div>
