blocks level issue

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/agileform4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/agileform4.html
@@ -15,6 +15,14 @@
       <script src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/js/html5shiv.js"></script>
       <script src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/js/respond.min.js"></script>
     <![endif]-->
+    
+     <style>
+        @media (max-width: 500px) and (min-width: 300px){
+            .videoWrapper{
+                margin-top:10px;
+            }
+        }
+    </style>
 
 </head>
 <body>
