--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout3.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout3.html
@@ -28,7 +28,7 @@
                         <div class="row" style="padding-top: 15px;"> 
                            <div class="col-sm-6 col-lg-6 ">
                                 <div class="col-image-holder text-center">
-                                    <img alt="" class="img-responsive" data-selector="img" height="800" src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/image1.png" width="" >
+                                    <img alt="" class="img-responsive" data-selector="img" height="800" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout3img1.jpg" width="" >
                                 </div>
                              </div>
                              <div class="col-sm-6 " style="padding-top: 10px;">
