--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
@@ -27,35 +27,35 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img class="img-responsive" src="http://www.consumer.es/imgs/2016/12/comprar-online-seguridad-consejos.jpg" alt="">
+                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img1.jpg" alt="">
                       <div class="  editContent">
-                        <h3>Thumbnail label</h3>
+                        <h3>Product Title</h3>
                       </div>
-                      <div class=" editContent">Loren Ipsum bla bla bla.
+                      <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
-                      <div class="caption "><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
+                      <div class="caption " style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img class="img-responsive" src="http://www.consumer.es/imgs/2016/12/dropbox-alojamiento-nube.jpg" alt="">
+                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img2.jpg" alt="">
                       <div class="  editContent">
-                        <h3>Thumbnail label</h3>
+                        <h3>Product Title</h3>
                       </div>
-                      <div class=" editContent">Loren Ipsum bla bla bla.
+                      <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
-                      <div class="caption "><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
+                      <div class="caption " style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img class="img-responsive" src="http://www.consumer.es/imgs/2016/06/compraenredessociales-sophia-portada1-750.png" alt="">
+                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img3.png" alt="">
                       <div class="  editContent">
-                        <h3>Thumbnail label</h3>
+                        <h3>Product Title</h3>
                       </div>
-                       <div class=" editContent">Loren Ipsum bla bla bla.
+                       <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
                       <div class=" caption"><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
                       </div>
@@ -63,13 +63,13 @@
                   </div>
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img class="img-responsive" src="http://www.consumer.es/imgs/2016/06/compraenredessociales-sophia-portada1-750.png" alt="">
+                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img4.jpg" alt="">
                       <div class=" editContent">
-                        <h3>Thumbnail label</h3>
+                        <h3>Product Title</h3>
                       </div>
-                      <div class=" editContent">Loren Ipsum bla bla bla.
+                      <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
-                      <div class="caption ">
+                      <div class="caption " style="padding-left: 0px;">
                         <a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
                       </div>
                     </div>
