video and form inmg change

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/content_section1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/content_section1.html
@@ -45,7 +45,7 @@
     						<div class="col-md-6">
     							
     							<div class="videoWrapper">
-                                    <img  width="560" height="315" src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/video_placeholder.png" data-video="" title="Play Video" class="video_placeholder img-responsive "/>
+                                    <img  width="560" height="315" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/lp-video-thumb.jpg" data-video="" title="Play Video" class="video_placeholder img-responsive "/>
     								<div class="frameCover" data-type="video"></div>
                                     <button class="video__button"></button>
     							</div>
