--- a/agile-frontend/WebContent/misc/pagebuilder/elements/content_section2.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/content_section2.html
@@ -53,7 +53,7 @@
     					<br>
     					
     					<div class="videoWrapper">
-                            <img src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/video_placeholder.png" data-video="" width="500" height="281" title="Play Video" class="video_placeholder img-responsive" />
+                            <img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/lp-video-thumb.jpg" data-video="" width="500" height="281" title="Play Video" class="video_placeholder img-responsive" />
                             <div class="frameCover" data-type="video"></div>
                             <button class="video__button"></button>
     					</div>
