--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
@@ -9,11 +9,6 @@
       <link  href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/favicon.ico" rel="shortcut icon">   
       <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8" id="mediumCss0">
       <link rel="stylesheet" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/css/medium-bootstrap.css" type="text/css" media="screen" charset="utf-8" id="mediumCss1">
-      <style>
-        img{
-          height: auto !important;
-        }
-      </style>
   </head>
   <body>
       
@@ -33,7 +28,7 @@
                       </div>
                       <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
-                      <div class="caption " style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
+                      <div class="caption " style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Buy Now</a> <a href="#" class="btn btn-default" role="button">Buy Now</a>
                       </div>
                     </div>
                   </div>
@@ -45,7 +40,7 @@
                       </div>
                       <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
-                      <div class="caption " style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
+                      <div class="caption " style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Buy Now</a>
                       </div>
                     </div>
                   </div>
@@ -57,7 +52,7 @@
                       </div>
                        <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
-                      <div class=" caption"><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
+                      <div class=" caption"><a href="#" class="btn btn-primary" role="button">Buy Now</a> 
                       </div>
                     </div>
                   </div>
@@ -70,7 +65,7 @@
                       <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
                       <div class="caption " style="padding-left: 0px;">
-                        <a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
+                        <a href="#" class="btn btn-primary" role="button">Buy Now</a> 
                       </div>
                     </div>
                   </div>
