--- a/agile-frontend/WebContent/misc/pagebuilder/elements/agileform3.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/agileform3.html
@@ -28,7 +28,7 @@
 
                     <div class="row">
                         <div id="agileform_div" class="col-md-6 col-md-offset-3 col-xs-offset-1">                
-                        <img class="img-responsive" id= "agileform" src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/thumbs/agileform.png"></img>
+                        <img class="img-responsive" id= "agileform" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/lp-form-placeholder.png"></img>
 
                          </div>
                     </div>                
