--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-office-prefs.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-office-prefs.html
@@ -70,7 +70,7 @@
                             <i class='icon-plus-sign' id="icon_id" /></i> {{agile_lng_translate 'prefs-email' 'email-folders'}}
                         </a> 
                         <span class = "office-folders-settings-txt" style = "vertical-align:text-top;margin-left:-3px">         
-                            <img border="0" src="{{getS3ImagePath '/img/help.png'}}" style="height:6px;vertical-align:top; cursor: pointer;" rel="popover" data-placement="right" data-content="{{agile_lng_translate 'prefs-email' 'office365-folders-selection-content'}}" id="element-title" data-trigger="hover" data-original-title="{{agile_lng_translate 'prefs-email' 'office365-folders-selection'}}">
+                            <img border="0" src="{{getS3ImagePath '/img/help.png'}}" style="height:6px;vertical-align:top; cursor: pointer;" rel="popover" data-placement="right" data-content="{{agile_lng_translate 'prefs-email' 'office365-folders-selection-content'}}" id="element-title" data-trigger="hover" data-original-title="">
                         </span>     
                         <span class="office-folders-select" style="display: none">           
                             <br>        
