changed regular and enterprise display text
Conflicts:
	agile-frontend/WebContent/locales/csv/i18n.csv

--- a/agile-frontend/WebContent/flatfull/tpl/billing/subscribe.html
+++ b/agile-frontend/WebContent/flatfull/tpl/billing/subscribe.html
@@ -116,7 +116,7 @@
                            </div>
                         </div>
                         <div class="plan-collection-content text-base text-center p show_limits" style="height:104px" id="pro_plan_statement">
-                           {{agile_lng_translate 'plan-and-upgrade' 'regular-content'}}
+                           {{agile_lng_translate 'plan-and-upgrade' 'regular-content-1'}}
                         </div>
 
 <button class="btn btn-block btn-default btn-plan btn-lg  m-b-md" id="choose-regular">
@@ -163,7 +163,7 @@
                            </div>
                         </div>
                         <div class="plan-collection-content text-base p text-center show_limits" style="min-height: 104px;">
-                           {{agile_lng_translate 'plan-and-upgrade' 'enterprise-content'}}
+                           {{agile_lng_translate 'plan-and-upgrade' 'enterprise-content-1'}}
                         </div>
 
 <button class="btn btn-block btn-default btn-plan btn-lg  m-b-md" id="choose-pro">
