deal details page

--- a/agile-frontend/WebContent/flatfull/tpl/deal-detail/deal-detail.html
+++ b/agile-frontend/WebContent/flatfull/tpl/deal-detail/deal-detail.html
@@ -14,10 +14,20 @@
   <div class="panel panel-default m-b">
     <div class="panel-body text-center">
 <div class="h3 font-thin custom-color text-ellipsis" style="width: calc(100% - 14px);">{{#if name}}{{name}}{{/if}}</div>
-{{#if_equals expected_value "0"}}
-<div class="m-b-sm text-base" style="font-size: 16px">{{currencySymbol}}{{expected_value}}</div>
+{{#if_equals currency_conversion_value "0"}}
+  <div class="m-b-sm text-base" style="font-size: 16px">{{currencyType currency_type}}{{currency_conversion_value}}</div>
+{{else}}
+  {{#if currency_conversion_value}} 
+    <div class="m-b-sm text-base" style="font-size: 16px">{{currencyType currency_type}}{{numberWithCommas currency_conversion_value}}</div>
+  {{else}}    
+    {{#if_equals expected_value "0"}}
+      <div class="m-b-sm text-base" style="font-size: 16px">{{currencySymbol}}{{expected_value}}</div>
+    {{/if_equals}}
+    {{#if expected_value}}
+      <div class="m-b-sm text-base" style="font-size: 16px">{{currencySymbol}}{{numberWithCommas expected_value}}</div>
+    {{/if}}
+  {{/if}}
 {{/if_equals}}
-{{#if expected_value}}
 <div class="m-b-sm text-base" style="font-size: 16px">{{currencySymbol}}{{numberWithCommas expected_value}}</div>
 {{/if}}
 <div class=" text-muted deal-track text-xs">
