--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header1.html
@@ -39,7 +39,7 @@
                             </div>  					
     						<div class="text-center margin-bottom-100">
     							<a href="#" class="btn btn-info btn-hg btn-embossed"><span class="fa fa-info-circle"></span> Learn more</a>
-    							<a href="#" class="btn btn-primary btn-hg btn-embossed"><span class="fa fa-shopping-cart"></span> Buy now for $99</a>
+    							<a href="#" class="btn btn-primary btn-hg btn-embossed second-btn"><span class="fa fa-shopping-cart"></span> Buy now for $99</a>
     						</div>
     				
     					</div>
