--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
@@ -22,19 +22,19 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img1.jpg" alt="">
+                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img3.png" alt="">
                       <div class="  editContent">
                         <h3>Product Title</h3>
                       </div>
                       <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
-                      <div class="caption " style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Buy Now</a> <a href="#" class="btn btn-default" role="button">Buy Now</a>
+                      <div class="caption " style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Buy Now</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img2.jpg" alt="">
+                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img3.png" alt="">
                       <div class="  editContent">
                         <h3>Product Title</h3>
                       </div>
@@ -58,7 +58,7 @@
                   </div>
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img4.jpg" alt="">
+                      <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout4img3.png" alt="">
                       <div class=" editContent">
                         <h3>Product Title</h3>
                       </div>
