added image caption block

--- a/agile-frontend/WebContent/misc/emailbuilder/template.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/template.html
@@ -84,6 +84,7 @@ td[class="responsive-cell"] {vertical-align: top;}
   td[class="image-caption"] { padding-left: 25px !important; padding-right: 25px !important; }
   table[class="image-caption-container"] { width:100% !important;}
   table[class="image-caption-column"] { width:100% !important; float: none;}
+  table[class="image-caption-column-text"] { width:100% !important; float: none;}
   td[class="image-caption-content"] img { width:100% !important; height:auto !important; }
   td[class="image-caption-content"] h2 { font-size: 20px !important; line-height: 170% !important; }
   td[class="image-caption-content"] p { font-size: 16px !important; line-height: 170% !important; }
@@ -157,7 +158,7 @@ td[class="responsive-cell"] {vertical-align: top;}
   td[class="head-logo"]  { width: 100%!important; text-align: center!important; }
   tr[class="header-nav"] { display: none; }
   td[class="responsive-cell"] {display: block;}
-
+  td[class="image-caption"] {padding: 0px!important;}
 }
 
 </style>
