updated for vmdrops content

--- a/agile-frontend/WebContent/flatfull/tpl/js-localize.html
+++ b/agile-frontend/WebContent/flatfull/tpl/js-localize.html
@@ -761,6 +761,8 @@ var _Agile_Resources_Json = {
             "Twilio-name" : "{{agile_lng_translate 'widgets' 'Twilio-name'}}",
             "twilo-call-transfer-confirmation" : "{{agile_lng_translate 'widgets' 'twilo-call-transfer-confirmation'}}",
 
+            "VMdrops-content" : "{{agile_lng_translate 'widgets' 'VMdrops-content'}}",
+
             "FreshBooks-content" : "{{agile_lng_translate 'widgets' 'FreshBooks-content'}}",
             "FreshBooks-displayName" : "{{agile_lng_translate 'widgets' 'FreshBooks-displayName'}}",
             "FreshBooks-name" : "{{agile_lng_translate 'widgets' 'FreshBooks-name'}}",
