--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header5.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header5.html
@@ -35,7 +35,7 @@
                                     
                             <div id="navbar-collapse-02" class="collapse navbar-collapse">
                                 <ul class="nav navbar-nav">               
-                                    <li class="active propClone"><a href="#">Home</a></li>
+                                    <li class="propClone"><a href="#">Home</a></li>
                                     <li class="propClone"><a href="#">Work</a></li>
                                     <li class="propClone"><a href="#">Blog</a></li>
                                     <li class="propClone"><a href="#">Contact</a></li>
