--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header4.html
@@ -30,7 +30,7 @@
                         </div>
                         <br>
                         <a href="#" class="btn btn-default btn-hg btn-wide"><span class="fa fa-info"></span> Learn more</a>
-                        <a href="#" class="margin-top btn btn-primary btn-hg btn-wide second-btn"><span class="fa fa-sign-in"></span> Sign up</a>
+                        <a href="#" class="btn btn-primary btn-hg btn-wide"><span class="fa fa-sign-in"></span> Sign up</a>
                      </div>
                   </div>
                   <!-- /.row -->
