text for blocks in lp

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
@@ -52,7 +52,7 @@
                       </div>
                        <div class=" editContent">Add product description here.Add product description here.Add product description here.
                       </div>
-                      <div class=" caption"><a href="#" class="btn btn-primary" role="button">Buy Now</a> 
+                      <div class=" caption" style="padding-left: 0px;"><a href="#" class="btn btn-primary" role="button">Buy Now</a> 
                       </div>
                     </div>
                   </div>
