--- a/agile-frontend/WebContent/misc/pagebuilder/elements/agileform3.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/agileform3.html
@@ -25,7 +25,7 @@
                 <div class="container">
 
                     <div class="row">
-                        <div id="agileform_div" class="col-md-6 col-md-offset-3 col-xs-offset-1">                
+                        <div id="agileform_div" class="col-md-6 col-md-offset-3">                
                         <img class="img-responsive" id= "agileform" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/lp-form-placeholder.png"></img>
 
                          </div>
