--- a/agile-frontend/WebContent/flatfull/header.html
+++ b/agile-frontend/WebContent/flatfull/header.html
@@ -407,7 +407,7 @@
                   	out.println("<li><a href='#activities'>Logs</a></li>");
                   	}
                   	out.println("</ul><ul class='nav navbar-nav pull-right' style='float:right!important;'><li class='nav-bar-search'> <form id='domainSearchForm' class=' navbar-search'  style='margin: 5px;'> <input id='domainSearchText' class='form-control pull-left' type='text' style='line-height: 17px;width:85%;'  data-provide='typeahead'    placeholder='Search'></input> <input id='domain-search-results' type='image' src='img/SearchIcon.png' class='searchbox pull-left m-xs p-t-xs' /><div class='clearfix'></div></form></li>");
-                  	 out.println("<li class='pull-right><div class='m-t-xs'><span class=' dropdown-toggle' data-toggle='dropdown' ><a style='background: transparent;border: 0px;'>");
+                  	 out.println("<li class='pull-right'><div class='m-t-xs'><span class=' dropdown-toggle' data-toggle='dropdown' ><a style='background: transparent;border: 0px;'>");
                     if (!StringUtils.isEmpty(currentUserPrefs.pic))
                         out.println("<img height='35' width='35' src='"+ domainUser.pic+ "' alt='...' class='pos-rlt pos-t-xs'></img>");
                     else
