currency value in activities and portlets

--- a/agile-frontend/WebContent/flatfull/tpl/currency-conversion-symbols-list-for-deal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/currency-conversion-symbols-list-for-deal.html
@@ -1,6 +1,6 @@
  <script id="currency-conversion-symbols-list-template" type="text/html">
                           <option value="USD-$" selected="1">USD $</option>
-                          <option value="AED-&#x62F;.&#x625;">AED &#x62F;.&#x625;</option>
+                          <option value="AED-Dh">AED Dh</option>
                           <option value="ANG-&#x192;">ANG &#x192;</option>
                           <option value="ARS-$">ARS $</option>
                           <option value="AUD-$">AUD $</option>
@@ -32,63 +32,63 @@
                           <option value="IDR-Rp">IDR Rp</option>
                           <option value="ILS-&#x20AA;">ILS &#x20AA;</option>
                           <option value="INR-Rs">INR Rs</option>
-                          <option value="ISK-kr">ISK kr</option>
+                          <option value="ISK-ISK">ISK-ISK</option>
                           <option value="JMD-J$">JMD J$</option>
                           <option value="JOD-JOD">JOD JOD</option>
                           <option value="JPY-&#xA5;">JPY &#xA5;</option>
                           <option value="KES-KSh">KES KSh</option>
                           <option value="KRW-&#x20A9;">KRW &#x20A9;</option>
-                          <option value="KWD-&#x62F;.&#x643;">KWD &#x62F;.&#x643;</option>
+                          <option value="KWD-KD">KWD KD</option>
                           <option value="KYD-$">KYD $</option>
                           <option value="KZT-&#x43B;&#x432;">KZT &#x43B;&#x432;</option>
                           <option value="LBP-&#xA3;">LBP &#xA3;</option>
                           <option value="LKR-&#x20A8;">LKR &#x20A8;</option>
                           <option value="LTL-Lt">LTL Lt</option>
                           <option value="LVL-Ls">LVL Ls</option>
-                          <option value="LYD-&#x644;.&#x62F;">LYD &#x644;.&#x62F;</option>
-                          <option value="MAD-MAD">MAD MAD</option>
+                          <option value="LYD-LD">LYD LD</option>
+                          <option value="MAD-DH">MAD DH</option>
                           <option value="MDL-MDL">MDL MDL</option>
                           <option value="MKD-&#x434;&#x435;&#x43D;">MKD &#x434;&#x435;&#x43D;</option>
                           <option value="MUR-&#x20A8;">MUR &#x20A8;</option>
                           <option value="MXN-Mex$">MXN Mex$</option>
                           <option value="MYR-RM">MYR RM</option>
-                          <option value="NAD-N$">NAD N$</option>
+                          <option value="NAD-$">NAD $</option>
                           <option value="NGN-&#x20A6;">NGN &#x20A6;</option>
                           <option value="NIO-C$">NIO C$</option>
                           <option value="NOK-kr">NOK kr</option>
                           <option value="NPR-&#x930;&#x942;">NPR &#x930;&#x942;</option>
                           <option value="NZD-$">NZD $</option>
-                          <option value="OMR-&#xFDFC;">OMR &#xFDFC;</option>
-                          <option value="PEN-S/">PEN S/</option>
+                          <option value="OMR-RO">OMR RO</option>
+                          <option value="PEN-S/.">PEN S/.</option>
                           <option value="PGK-K">PGK K</option>
                           <option value="PHP-&#x20B1;">PHP &#x20B1;</option>
-                          <option value="PKR-PKR">PKR PKR</option>
+                          <option value="PKR-&#8360;">PKR &#8360;</option>
                           <option value="PLN-z&#x142;">PLN z&#x142;</option>
-                          <option value="PYG-&#x20B2;">PYG &#x20B2;</option>
-                          <option value="QAR-&#x631;.&#x642;">QAR &#x631;.&#x642;</option>
-                          <option value="RON-RON">RON RON</option>
-                          <option value="RSD-&#x420;&#x421;&#x414;">RSD &#x420;&#x421;&#x414;</option>
+                          <option value="PYG-Gs">PYG Gs</option>
+                          <option value="QAR-QR">QAR QR</option>
+                          <option value="RON-lei">RON lei</option>
+                          <option value="RSD-&#1044;&#1080;&#1085;.">RSD &#1044;&#1080;&#1085;.</option>
                           <option value="RUB-&#x440;&#x443;&#x431;">RUB &#x440;&#x443;&#x431;</option>
-                          <option value="SAR-&#xFDFC;">SAR &#xFDFC;</option>
-                          <option value="SCR-SRe">SCR SRe</option>
+                          <option value="SAR-SR">SAR SR</option>
+                          <option value="SCR-&#8360;">SCR &#8360;</option>
                           <option value="SEK-kr">SEK kr</option>
                           <option value="SGD-$">SGD $</option>
                           <option value="SLL-Le">SLL Le</option>
-                          <option value="SVC-$">SVC $</option>
+                          <option value="SVC-&#8353;">SVC &#8353;</option>
                           <option value="THB-&#xE3F;">THB &#xE3F;</option>
-                          <option value="TND-&#x62F;.&#x62A;">TND &#x62F;.&#x62A;</option>
-                          <option value="TRY-&#x20BA;">TRY &#x20BA;</option>
+                          <option value="TND-TD">TND TD</option>
+                          <option value="TRY-YTL">TRY YTL</option>
                           <option value="TTD-TT$">TTD TT$</option>
-                          <option value="TWD-&#x584A;">TWD &#x584A;</option>
-                          <option value="TZS-x/y">TZS x/y</option>
-                          <option value="UAH-&#x20B4;">UAH &#x20B4;</option>
+                          <option value="TWD-NT$">TWD NT$</option>
+                          <option value="TZS-TSh">TZS TSh</option>
+                          <option value="UAH-UAH">UAH UAH</option>
                           <option value="UGX-USh">UGX USh</option>
                           <option value="UYU-$U">UYU $U</option>
                           <option value="UZS-&#x43B;&#x432;">UZS &#x43B;&#x432;</option>
-                          <option value="VEF-Bs">VEF Bs</option>
+                          <option value="VEF-VEF">VEF-VEF</option>
                           <option value="VND-&#x20AB;">VND &#x20AB;</option>
-                          <option value="XOF-XOF">XOF XOF</option>
-                          <option value="YER-&#xFDFC;">YER &#xFDFC;</option>
+                          <option value="XOF-CFAF">XOF CFAF</option>
+                          <option value="YER-YER">YER YER</option>
                           <option value="ZAR-R">ZAR R</option>
-                          <option value="ZMK-ZMW">ZMK ZMW</option>
+                          <option value="ZMK-ZK">ZMK ZK</option>
 </script>
