added the language changes in deployment
Conflicts:
	agile-frontend/util/deploy.sh

--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-advanced.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-advanced.html
@@ -45,6 +45,8 @@
                             <select name="language" id="language" class="form-control">
                                 <option value="en">English</option>
                                 <option value="es">{{agile_lng_translate 'prefs-settings' 'spanish'}}</option>
+                                <option value="rs">{{agile_lng_translate 'prefs-settings' 'russian'}}</option>
+                                <option value="it">{{agile_lng_translate 'prefs-settings' 'italian'}}</option>
                             </select>
                         </div>
                     </div>
