--- a/agile-frontend/WebContent/misc/pagebuilder/elements/content_section12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/content_section12.html
@@ -41,7 +41,7 @@
                                 ">Generate leads. Close deals. Support customers.</div>
                             
                             <div class="text-center">
-                                <img class="img-responsive" src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/image1.png" alt="Image 1" data-selector="img">
+                                <img class="img-responsive" src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/image1.png" alt="" data-selector="img">
                             </div>
                     
                         </div>
